# emp-ag2pc

./: CMakeLists.txt  README.md  clean.sh  run_all.sh
test/: command_line_run.cpp  command_line_utils.hpp  single_execution_run.cpp  util.h
